app-services/dashboard-frontend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dashboard
  namespace: banking-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  to:
    kind: Service
    name: dashboard-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
